[gd_scene load_steps=6 format=3 uid="uid://dh5vo0dosesfe"]

[ext_resource type="Script" uid="uid://c1re7oifoco3b" path="res://scripts/pause.gd" id="1_7q3j4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hldc5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ep5p"]
bg_color = Color(0.627451, 0.419608, 0.152941, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wcpj6"]
bg_color = Color(0.627451, 0.419608, 0.152941, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8v81o"]
bg_color = Color(0.627451, 0.419608, 0.152941, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 5.0
expand_margin_right = 5.0

[node name="Pause" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_7q3j4")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_hldc5")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 32.0

[node name="Menu_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_0ep5p")
text = "HOME"

[node name="restart_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_wcpj6")
text = "RESTART"

[node name="play_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_8v81o")
text = "PLAY"
